syntax = "proto3";

option go_package = "github.com/wei840222/tinychats/proto";
option java_multiple_files = true;
option java_package = "com.github.wei840222.tinychats.proto";
option java_outer_classname = "MessageProto";

import "google/protobuf/timestamp.proto";

package com.github.wei840222.tinychats.proto;

service Message {
    rpc CreateMessage (CreateMessageRequest) returns (CreateMessageResponse) {}
    rpc ListMessages (ListMessagesRequest) returns (ListMessagesResponse) {}
}

message MessageResponse {
    int64 id = 1;
    string userId = 2;
    string text = 3;
    google.protobuf.Timestamp createdAt = 4;
    int64 channelId = 5;
}

message CreateMessageRequest {
    string userId = 1;
    string text = 2;
    int64 channelId = 3;
}

message CreateMessageResponse {
    MessageResponse message = 1;
}

message ListMessagesRequest {
    int64 channelId = 1;
}

message ListMessagesResponse {
    repeated MessageResponse messages = 1;
}